[package]
name = "passuth"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "passuth"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "*", features = [
    "extension-module",
    "abi3-py39",
    "generate-import-lib",
    "auto-initialize",
] }
password-auth = { version = "*", features = ["argon2", "pbkdf2", "scrypt"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
