[package]
name = "passuth"
version = "0.3.2"
edition = "2024"
description = "A python package wrapping 'password-auth' rust crate for password hashing and verification."
repository = "https://github.com/Bing-su/passuth"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "passuth"

[dependencies]
fernet = { version = "*", default-features = false, features = ["rustcrypto"] }
password-auth = { version = "1", features = ["argon2", "pbkdf2", "scrypt"] }
pyo3 = { version = ">=0.28, <1", features = [
  "abi3-py310",
  "extension-module",
  "generate-import-lib",
] }

[profile.release]
opt-level = 3
split-debuginfo = "packed"
strip = true
lto = true
panic = "abort"
codegen-units = 1
