[project]
name = "passuth"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Dowon", email = "ks2515@naver.com" }]
keywords = ["argon2", "encryption", "hashing", "password", "security"]
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
]
dependencies = []
dynamic = ["description", "version"]

[project.urls]
source = "https://github.com/Bing-su/passuth"

[project.scripts]
passuth = "passuth.__main__:main"

[project.optional-dependencies]
test = ["pytest", "pytest-pretty", "pytest-xdist", "hypothesis", "jsonpickle"]
test-extra = ["argon2-cffi", "cryptography"]

[dependency-groups]
dev = ["nox[uv]", "ruff"]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[tool.cibuildwheel]
build-frontend = "build[uv]"
skip = ["gp311*", "gp*-win*", "*-musllinux_riscv64"]
test-extras = ["test"]
test-command = "pytest -n 2 {project}/tests"
test-skip = ["*_riscv64"]
enable = ["pypy", "graalpy"]

[tool.cibuildwheel.macos]
before-build = "rustup target add x86_64-apple-darwin"
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"

[tool.cibuildwheel.linux]
before-build = [
  "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y",
  ". $HOME/.cargo/env",
]
archs = ["auto64"]

[tool.cibuildwheel.linux.environment]
MATURIN_NO_INSTALL_RUST = "1"
PATH = "$HOME/.cargo/bin:$HOME/.local/bin:$PATH"

[tool.cibuildwheel.windows]
archs = ["auto64"]

[tool.maturin]
profile = "release"
python-source = "python"

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "FBT",
  "FURB",
  "I001",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TC",
  "TRY",
  "UP",
  "W",
]
ignore = ["B905", "E501"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/*_test.py" = ["S101"]

[tool.uv]
default-groups = "all"
